[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/characters/enemy_triangle.png" type="Texture" id=1]
[ext_resource path="res://src/actors/TriangleEnemy.gd" type="Script" id=3]
[ext_resource path="res://src/EnemyHitbox.gd" type="Script" id=4]
[ext_resource path="res://src/EnemyHurtbox.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 2.25, 2.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 500, 500 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
resource_name = "Spin"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -45, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 45, -0.25, 0, 0.25, 0, 90, -0.25, 0, 0.25, 0, 135, -0.25, 0, 0.25, 0, 180, -0.25, 0, 0.25, 0, 225, -0.25, 0, 0.25, 0, 270, -0.25, 0, 0.25, 0, 315, -0.25, 0, 0.25, 0, 360, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 )
}

[node name="TriangleEnemy" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="EnemyHitbox" type="Area2D" parent="AnimatedSprite"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/EnemyHitbox"]
position = Vector2( 0, -14 )
shape = SubResource( 7 )

[node name="EnemyHitbox2" type="Area2D" parent="AnimatedSprite"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/EnemyHitbox2"]
position = Vector2( 15, 15 )
shape = SubResource( 7 )

[node name="EnemyHitbox3" type="Area2D" parent="AnimatedSprite"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/EnemyHitbox3"]
position = Vector2( -15, 15 )
shape = SubResource( 7 )

[node name="EnemyHurtbox2" type="Area2D" parent="AnimatedSprite"]
script = ExtResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AnimatedSprite/EnemyHurtbox2"]
polygon = PoolVector2Array( 0, 15, 15, 15, 0, -15, -15, 15 )

[node name="CollisionShape" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, 15, 15, 15, 0, -15, -15, 15 )

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/RESET = SubResource( 6 )
anims/Spin = SubResource( 5 )

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
